--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -92,6 +92,9 @@ gs_as_domination_diff "5"
 // If enabled, trigger a scramble if a team never captures the point in koth mode
 gs_as_koth_pointcheck "0"
 
+// If enabled, lock teams when a scramble is about to happen until it happens. This will block clients from changing to spectator
+gs_as_lockteamsbefore "1"
+
 
 // **************************
 //							*
