--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -128,7 +128,11 @@ gs_setup_recharge "1"
 // 3 = Player Score Per Minute.
 // 4 = Player Kill-Death Ratios
 // 5 = Swap the top players on each team, controlled by gs_top_swaps
-// 6 = Choose randomly one of the above sort modes.
+// 6 = Use GameME rank
+// 7 = Use GameMe Skill
+// 8 = Use Global GameMe rank
+// 9 = Use Global GameMe skill
+// 10 = Choose randomly one of the above sort modes.
 // This controls how players get swapped during a scramble.
 gs_sort_mode "1"
 
