--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -132,7 +132,8 @@ gs_setup_recharge "1"
 // 7 = Use GameMe Skill
 // 8 = Use Global GameMe rank
 // 9 = Use Global GameMe skill
-// 10 = Choose randomly one of the above sort modes.
+// 10 = Use GameMe Session
+// 11 = Choose randomly one of the above sort modes.
 // This controls how players get swapped during a scramble.
 gs_sort_mode "1"
 
