--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -137,6 +137,11 @@ gs_setup_recharge "1"
 // This controls how players get swapped during a scramble.
 gs_sort_mode "1"
 
+// Percentage of players to randomly choose during a random scramble
+// min 0.10
+// max 0.8
+gs_random_selections "0.55"
+
 // The number of players to swap during a top-swap scramble
 gs_top_swaps "5"
 
