--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -133,7 +133,9 @@ gs_setup_recharge "1"
 // 8 = Use Global GameMe rank
 // 9 = Use Global GameMe skill
 // 10 = Use GameMe Session
-// 11 = Choose randomly one of the above sort modes.
+// 11 = Use HlxCe Rank
+// 12 = Use HlxCe Skill
+// 13 = Choose randomly one of the above sort modes.
 // This controls how players get swapped during a scramble.
 gs_sort_mode "1"
 
