--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -135,7 +135,8 @@ gs_setup_recharge "1"
 // 10 = Use GameMe Session
 // 11 = Use HlxCe Rank
 // 12 = Use HlxCe Skill
-// 13 = Choose randomly one of the above sort modes.
+// 13 = Sort by player classes
+// 14 = Choose randomly one of the above sort modes.
 // This controls how players get swapped during a scramble.
 gs_sort_mode "1"
 
