--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -223,7 +223,9 @@ gs_prevent_spec_imbalance "0"
 gs_vote_advertise "500"
 
 // String clients type in chat to trigger a vote
-gs_vote_trigger "votescramble"
+// separate multiple triggers with COMMA
+// max of 3 triggers
+gs_vote_trigger "votescramble,scramblevote,sausage"
 
 // If set, publicly started votes are disabled when an admin is preset.
 gs_vote_adminblock "0"
