--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -263,5 +263,5 @@ gs_vote_delay "60.0"
 // Time in seconds after a successful scramble in which players can vote again.
 gs_vote_delay2 "300"
 
-// Minimum poeple connected before any voting will work.
+// Minimum people connected before any voting will work.
 gs_vote_minplayers "6"
