--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -158,6 +158,9 @@ gs_scramblerounds "0"
 // Also stops scrambles from being started if one has occured already during a round.
 gs_no_sequential_scramble "1"
 
+// If set, then print scramble stats
+gs_as_print_stats "1"
+
 
 // **************************
 //							*
