--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -161,6 +161,9 @@ gs_no_sequential_scramble "1"
 // If set, then print scramble stats
 gs_as_print_stats "1"
 
+// If set, then grand dueling immunity during a scramble.
+gs_as_dueling_immunity "0"
+
 
 // **************************
 //							*
