--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -45,6 +45,9 @@ gs_ab_forcetrigger "4"
 // "0" will disable this function
 gs_ab_timelimit "0"
 
+// Only balance human players and ignore bots.
+gs_ab_humanonly "0"
+
 // Force a balance between each round. (If you use a custom team balance plugin that doesn't do this already, or you have the default one disabled)
 // does not require this plugin's autobalacne to be enabled
 gs_force_balance "0"
