--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -98,6 +98,9 @@ gs_as_koth_pointcheck "0"
 // If enabled, lock teams when a scramble is about to happen until it happens. This will block clients from changing to spectator
 gs_as_lockteamsbefore "1"
 
+// If enabled, lock teams the entire next round after a scramble. This will block clients from changing teams
+gs_as_lockteamsafter "0"
+
 
 // **************************
 //							*
