--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -7,7 +7,6 @@ gs_enabled "1"
 //							*
 // **************************
 
-
 // Enable/disable the autobalance feature of this plugin.
 // Use only if you have the built-in balancer disabled.
 gs_autobalance "0"
@@ -223,6 +222,9 @@ gs_use_buddy_system "0"
 // If set, block client changes to spectator that result in a team imbalance
 gs_prevent_spec_imbalance "0"
 
+// Select spectators who have recently changed to specator during scrambles and force-balance.
+// Setting to 0 disables.
+gs_Select_spectators "0"
 
 // **************************
 //							*
