gscramble       - changed setting naming error for filling ubers during setup scrambles to be more accurate.

--- a/gscramble/cfg/sourcemod/plugin.gscramble.cfg
+++ b/gscramble/cfg/sourcemod/plugin.gscramble.cfg
@@ -125,7 +125,7 @@ gs_setup_reset "1"
 gs_scramble_immune "0"
 
 // If a scramble-now happens during setup time, fill up any medic's uber-charge.
-gs_setup_recharge "1"
+gs_setup_fill_ubers "1"
 
 // Player scramble sort mode.
 // 1 = Random
