_david_'s GScramble Redux 3.0.16

--- a/cfg/sourcemod/plugin.gscramble.cfg
+++ b/cfg/sourcemod/plugin.gscramble.cfg
@@ -169,6 +169,8 @@ gs_as_print_stats "1"
 // If set, then grand dueling immunity during a scramble.
 gs_as_dueling_immunity "0"
 
+// Only allow one scramble per round
+gs_onescrambleperround "1"
 
 // **************************
 //							*
